[package]
name = "process-muxer-core"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = """
  Library for single-threaded process multiplexing
"""
repository = "https://github.com/tstat/process-muxer"

[dependencies]
libc = "0.2.155"
mio = { version = "0.8.11", features = ["os-ext"] }
slab = "0.4.9"
signal-hook-mio = { version = "0.2.3", features = ["support-v0_8"] }
signal-hook = "0.3.17"

[features]
default = []
"signals" = []
